fix: pref-display spacing

--- a/frontend/permissions-editor/src/app/preview/preview.component.css
+++ b/frontend/permissions-editor/src/app/preview/preview.component.css
@@ -47,4 +47,5 @@ mat-card-header {
 
 .pref-display {
     margin: 40px;
+    padding: 40px;
 }
